more spacing issues ☹️

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,7 @@
 div.page.header {
+	border: 1px solid green;
 	background: $white;
-	position: fixed;
+	position: absolute;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	top: 0px;
