--- a/src/styles/components/_resume.scss
+++ b/src/styles/components/_resume.scss
@@ -1,5 +1,5 @@
 .resume-container {
-	border: 1px solid green;
+	border: 1px solid orange;
 
 	h3 {
 		font-weight: 400;
@@ -15,7 +15,7 @@
 	@include media($mobile) {
 		@include span-columns(10);
 		@include shift(1);
-		padding-top: 80px;
+		margin-top: 80px;
 		padding-bottom: 80px;
 
 		p {
@@ -30,7 +30,7 @@
 	@include media($screen-xl) {
 		@include span-columns(12);
 		@include shift(0);
-		padding-top: 40px;
+		margin-top: 40px;
 		padding-bottom: 0px;
 
 		p {
